# youpforwhatsapp

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  index.md  meson.build
.github/workflows/: rust.yml
build-aux/: cargo.sh  com.gigitux.gtkwhats.json  com.gigitux.youp.json  com.gigitux.youp.yml  dev.py  dist-vendor.sh
data/: com.gigitux.gtkwhats.desktop  com.gigitux.gtkwhats.gschema.xml  com.gigitux.gtkwhats.json  com.gigitux.gtkwhats.metainfo.xml  com.gigitux.youp.desktop  com.gigitux.youp.gschema.xml  com.gigitux.youp.metainfo.xml  com.gigitux.youp.xml  generated-sources.json  gschemas.compiled  meson.build
src/: lib.rs  main.rs  meson.build
src/constants/: constants.rs
src/controllers/: about.rs  headbar.rs  indicator.rs  mod.rs  settings.rs
src/logic/: mod.rs  settings_logic.rs
src/models/: applications.rs  constants.rs  mod.rs
src/ui/: mod.rs  models.rs  ui.rs
src/views/: headbar.rs  indicator.rs  mod.rs  settings.rs  ui.rs  webview.rs
