[package]
name = "gtkwhats"
version = "1.0.0"
authors = ["gigitux <gigitux@gmail.com>"]
edition = "2018"
description = "Simple wrapper for Whatsapp Web"
license = "MIT"


[dependencies]
webkit2gtk = "0.9.2"
gdk = '0.12.0'
glib = '0.9.0'

[dependencies.gtk]
version = "0.8.1" 
features = ["v3_16"]

[dependencies.gio]
version = "0.8.1"
features = ["v2_44"]