[package]
name = "gtkwhats"
version = "1.0.0"
authors = ["gigitux <gigitux@gmail.com>"]
edition = "2018"
description = "Simple wrapper for Whatsapp Web"
license = "MIT"


[dependencies]
webkit2gtk = "0.11.0"
gdk = '0.13.2'
glib = '0.10.3'

[dependencies.gtk]
version = "0.9.2" 
features = ["v3_16"]

[dependencies.gio]
version = "0.9.1"
features = ["v2_44"]