[package]
name = "youp"
version = "2.0.0"
authors = ["gigitux <gigitux@gmail.com>"]
edition = "2018"
description = "A wrapper for whatsapp written in Rust"
license = "MIT"


[dependencies]
gdk = '0.13.2'
glib = '0.10.3'
libappindicator = "0.5.2"
gdk-pixbuf = "0.9.0"

[dependencies.gtk]
version = "0.9.2" 
features = ["v3_16"]

[dependencies.gio]
version = "0.9.1"
features = ["v2_44"]

[dependencies.webkit2gtk]
version= "0.11.0"
features= ["v2_16"]
